# TeachRules

./: .env  .gitignore  manage.py  pyproject.toml
TeachRules/: asgi.py  settings.py  urls.py  wsgi.py
module/: admin.py  models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
