[tool.poetry]
name = "teachrules"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
django-cors-headers = "4.3.1"
djangorestframework = "^3.15.1"
routers = "^0.10.1"
django-filter = "^24.1"
djangorestframework-simplejwt = "^5.3.1"
generics = "^6.0.0"
coverage = "^7.4.4"
coreapi = "^2.3.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"
pyopenssl = "^24.1.0"
eventlet = "^0.36.0"
drf-yasg = "^1.21.7"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-extensions = "^3.2.3"
django-simple-captcha = "^0.6.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
